fix: add z-index properties to Risk Level and navbar (#10)

--- a/assets/css/dark-mode.scss
+++ b/assets/css/dark-mode.scss
@@ -57,7 +57,7 @@
         }
     }
 
-    .risk-category {
+    #risk-category {
         .category-name {
             color: #fff !important;
         }
